--- a/Site Test Two/pages/gallery.css
+++ b/Site Test Two/pages/gallery.css
@@ -6,9 +6,9 @@
 
 /* ---------------- GALLERY PAGE CONTENT CSS ---------------- */
 
-@@font-face {
-      font-family: FuturaPTMedium
-      src: url('/fonts/FuturaPTMedium.otf');
+@font-face {
+      font-family: 'FuturaPTMedium';
+      src:  url('/fonts/FuturaPTMedium.woff2') format('woff2'),
 }
 
 document,
@@ -57,11 +57,12 @@ header h2 {
 
 nav a {
       text-decoration: none;
+      display: block;
       color: black;
 }
 
 nav a:hover {
-      color: red;
+      color: #ff2800;
 }
 
 nav ul {
@@ -75,13 +76,11 @@ nav li {
 	display: inline-block;
 	padding: 5px;
 	margin-right: 5px;
-	width: 14%;
+	width: 13%;
 }
 
 nav li:hover {
-
 	color: red;
-	font-weight: bold;
 	cursor: pointer;
 }
 
